--- a/CFP.App/Formularios/Pesquisas/PesquisaPessoas.xaml
+++ b/CFP.App/Formularios/Pesquisas/PesquisaPessoas.xaml
@@ -21,7 +21,7 @@
                 <DataGridTextColumn Binding="{Binding Id}" Header="Código"/>
                 <DataGridTextColumn Binding="{Binding Nome}" Header="Nome"/>
                 <DataGridTextColumn Binding="{Binding ValorTotalBruto}" Header="Total Renda Bruta"/>
-                <DataGridTextColumn Binding="{Binding ValorTotalLiquida}" Header="Total Renda Líquida"/>
+                <DataGridTextColumn Binding="{Binding ValorTotalLiquido}" Header="Total Renda Líquida"/>
                 <DataGridTextColumn Binding="{Binding Situacao}" Header="Situação"/>
             </DataGrid.Columns>
         </DataGrid>
