--- a/CFP.App/Formularios/Cadastros/UserControlPessoa.xaml
+++ b/CFP.App/Formularios/Cadastros/UserControlPessoa.xaml
@@ -87,7 +87,7 @@
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
                      Foreground="#FF1F3D68"  
-                     VerticalAlignment="Top" Height="49" Margin="0,-2,0.4,0"/>
+                     VerticalAlignment="Top" Height="52" Margin="0,0,0.4,0"/>
 
                 <ComboBox 
                     x:Name="cmbSituacao"
@@ -95,7 +95,7 @@
                      Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,48,0.4,329.6"  
+                     Foreground="#FF1F3D68" Margin="0,52,0.4,329.6" Height="48"  
                      />
                 <GroupBox x:Name="GroupBoxRendas"
                     Header="Defina sua Renda" 
@@ -120,7 +120,7 @@
                                  FontFamily="Champagne &amp; Limousines" 
                                  FontSize="22" 
                                  Foreground="#FF1F3D68"  
-                                 VerticalAlignment="Top" PreviewTextInput="txtRendaBruto_PreviewTextInput" PreviewKeyDown="txtRendaBruto_PreviewKeyDown"/>
+                                 VerticalAlignment="Top" PreviewTextInput="txtRendaBruto_PreviewTextInput" PreviewKeyDown="txtRendaBruto_PreviewKeyDown" />
 
                         <TextBox
                                  x:Name="txtRendaLiquida"
