--- a/CFP.App/Formularios/Pesquisas/PesquisaPessoas.xaml
+++ b/CFP.App/Formularios/Pesquisas/PesquisaPessoas.xaml
@@ -20,8 +20,8 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding Id}" Header="Código"/>
                 <DataGridTextColumn Binding="{Binding Nome}" Header="Nome"/>
-                <DataGridTextColumn Binding="{Binding ValorTotalBruto}" Header="Total Renda Bruta"/>
-                <DataGridTextColumn Binding="{Binding ValorTotalLiquido}" Header="Total Renda Líquida"/>
+                <DataGridTextColumn Binding="{Binding ValorTotalBruto, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" Header="Total Renda Bruta"/>
+                <DataGridTextColumn Binding="{Binding ValorTotalLiquido, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" Header="Total Renda Líquida"/>
                 <DataGridTextColumn Binding="{Binding Situacao}" Header="Situação"/>
             </DataGrid.Columns>
         </DataGrid>
